<resources>
    <string name="app_name">Eprine</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="biometric_authentication">Biometric Authentication</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="user_name">User name</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="username">Username</string>
</resources>