<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainRL"
    android:background="@drawable/login_bg"
    tools:context=".Login">


    <RelativeLayout
        android:id="@+id/whiteRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logoIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:id="@+id/mainLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_margin="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/email_icon" />

                <com.eprine.customcontrols.EditTextRegular
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="16sp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textColorHint="@color/textColor"
                    android:textColor="@color/textColor"
                    android:layout_marginStart="5dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="35dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/password_icon" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <com.eprine.customcontrols.EditTextRegular
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:layout_centerVertical="true"
                        android:inputType="textPassword"
                        android:drawablePadding="10dp"
                        android:singleLine="true"
                        android:layout_toStartOf="@+id/showPasswordIV"
                        android:background="@null"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/showPasswordIV"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/password_open" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="45dp"
                android:background="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/rememberMeCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:buttonTint="@color/colorPrimary"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:text="@string/remember_me" />

            <CheckBox
                android:id="@+id/biometricsCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:buttonTint="@color/colorPrimary"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:text="@string/biometric_authentication" />

        </LinearLayout>


        <Button
            android:id="@+id/loginBT"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#fff"
            android:layout_below="@+id/mainLL"
            android:text="@string/login"
            android:textSize="18sp"
            android:background="@drawable/loginrounderselector" />




    </RelativeLayout>



    <com.eprine.customcontrols.TextViewRegular
        android:id="@+id/forgotPasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:textColor="@color/textColor"
        android:text="@string/forgot_password"
        />


</RelativeLayout>